--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${server.port}
+server.port=${PORT:8081}
 spring.datasource.url=${spring.datasource.url}
 spring.datasource.username=${spring.datasource.username}
 spring.datasource.password=${spring.datasource.password}
